--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,7 @@
   --app-blue-1: #1a1a3e;
   --app-blue-2: #0A1B26;
   --app-blue-3: #191F26;
+  --app-blue-4: #1d9bf0;
   --app-gray-1: #1b1b1b;
   --app-white-1: #ffffff;
   --app-white-2: #e7e9ea;
