--- a/components/Process/index.module.scss
+++ b/components/Process/index.module.scss
@@ -16,8 +16,10 @@
 }
 
 .cardWrapper {
+  border-radius: 20px;
   width: calc((100vw) / 3 - 80px);
   height: calc((100vh) / 2 - 80px);
+  overflow: hidden;
 
   &:nth-child(odd) {
     .card {
@@ -36,7 +38,7 @@
   width: 100%;
   height: 100%;
   padding: 40px;
-  border-radius: 20px;
+  box-shadow: inset 0 10px 20px rgba(0, 0, 0, 0.19), inset 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .cardInner {
@@ -44,14 +46,16 @@
   height: 100%;
   border-radius: 12px;
   display: flex;
+  padding: 24px;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   background-color: var(--app-gray-1);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .title {
-  font-size: 20px;
+  font-size: 32px;
   text-align: center;
   color: var(--app-white-2);
   margin-bottom: 16px;
@@ -59,6 +63,7 @@
 }
 
 .description {
+  width: 90%;
   font-size: 16px;
   font-weight: 300;
   text-align: center;
