--- a/components/Process/index.module.scss
+++ b/components/Process/index.module.scss
@@ -1,62 +1,282 @@
 .sections {
-  display: flex;
   position: relative;
+  background-color: var(--app-gray-1);
+}
+
+.sectionTitle {
+  font-size: 50px;
+  padding: 0 40px;
+  text-align: center;
+  color: var(--app-white-2);
+  margin-bottom: 32px;
+}
+
+.sectionSubTitle {
+  font-size: 24px;
+  padding: 0 40px;
+  text-align: center;
+  color: var(--app-white-2);
+  margin-bottom: 90px;
+}
+
+.clouds {
+  width: 100%;
+
+  .cloud {
+    background: white;
+    width: 100px;
+    height: 35px;
+    border-radius: 35px;
+    position: absolute;
+    box-shadow: 0 3px 5px transparentize(#3a506b, 0.4);
+
+    &:before {
+      content: "";
+      height: 40px;
+      width: 40px;
+      background: white;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      border-radius: 50%;
+    }
+
+    &:after {
+      content: "";
+      height: 60px;
+      width: 60px;
+      background: white;
+      position: absolute;
+      bottom: 5px;
+      right: 15%;
+      border-radius: 50%;
+    }
+
+    &:nth-child(1) {
+      width: 80px;
+      top: 300px;
+      left: 70%;
+
+      &:before {
+        left: auto;
+        right: 0;
+      }
+
+      &:after {
+        width: 50px;
+        height: 50px;
+        right: auto;
+        left: 10%;
+      }
+    }
+
+    &:nth-child(2) {
+      width: 80px;
+      top: 390px;
+      left: 30%;
+
+      &:before {
+        left: auto;
+        right: 0;
+      }
+
+      &:after {
+        width: 50px;
+        height: 50px;
+        right: auto;
+        left: 10%;
+      }
+    }
+
+    &:nth-child(3) {
+      width: 80px;
+      top: -100px;
+      left: 62%;
+
+      &:before {
+        left: auto;
+        right: 0;
+      }
+
+      &:after {
+        width: 50px;
+        height: 50px;
+        right: auto;
+        left: 10%;
+      }
+    }
+  }
 }
 
 .section {
   width: 100vw;
-  height: 100vh;
-  padding: 40px;
   display: flex;
   flex-wrap: wrap;
   flex-shrink: 0;
   align-items: center;
-  justify-content: center;
   gap: 24px;
+  padding: 40px 0;
 }
 
-.cardWrapper {
-  border-radius: 20px;
-  width: calc((100vw) / 3 - 80px);
-  height: calc((100vh) / 2 - 80px);
-  overflow: hidden;
+.row {
+  --card-color-wirdth: 15px;
 
-  &:nth-child(odd) {
-    .card {
-      background-image: linear-gradient(to bottom right, var(--app-purple-2), var(--app-purple-3));
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  margin-bottom: 40px;
+  animation: float 6s ease-in-out infinite;
+
+  &:first-child {
+    margin-left: 80px;
+    padding: var(--card-color-wirdth) 0 var(--card-color-wirdth) var(--card-color-wirdth);
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    background-image: linear-gradient(to right, var(--app-purple-3), var(--app-gray-1));
+
+    .balloon {
+      left: 60px;
+      box-shadow: inset 0 0 10px 5px #43116c;
+      background: var(--app-purple-2);
+
+      &::before {
+        z-index: 1;
+        border-bottom: 20px solid #43116c;
+      }
+    }
+
+    .rowInner {
+      border-top-left-radius: 86px;
+      border-bottom-left-radius: 86px;
     }
   }
 
-  &:nth-child(even) {
-    .card {
-      background-image: linear-gradient(to bottom right, var(--app-purple-1), var(--app-blue-4));
+  &:last-child {
+    margin-right: 80px;
+    padding: var(--card-color-wirdth) var(--card-color-wirdth) var(--card-color-wirdth) 0;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    background-image: linear-gradient(to right, var(--app-gray-1), var(--app-purple-3));
+    animation-delay: -1.5s;
+
+    .balloon {
+      left: 30px;
+      box-shadow: inset 0 0 10px 5px #7a102a;
+      background: var(--app-red-2);
+
+      &::before {
+        z-index: 1;
+        border-bottom: 20px solid #7a102a;
+      }
+    }
+
+    .rowInner {
+      border-top-right-radius: 86px;
+      border-bottom-right-radius: 86px;
+    }
+  }
+
+  &.popped {
+    animation: 5s fall cubic-bezier(.48, .48, .34, 1.07);
+
+    .balloon {
+      animation: 5s pop cubic-bezier(.48, .48, .34, 1.07);
+      pointer-events: none;
     }
   }
 }
 
-.card {
-  width: 100%;
-  height: 100%;
-  padding: 40px;
-  box-shadow: inset 0 10px 20px rgba(0, 0, 0, 0.19), inset 0 6px 6px rgba(0, 0, 0, 0.23);
+.balloon {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  top: 0;
+  cursor: grab;
+  transform-origin: bottom;
+  transform: translateY(-230px);
+
+  &:after {
+    position: absolute;
+    content: "";
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 75px;
+    border-width: 5px;
+    border-style: solid;
+    transform: rotate(37deg);
+    border-left-color: var(--app-white-1);
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    background: none;
+    left: 50%;
+    margin-left: -45px;
+    top: 50%;
+    margin-top: -45px;
+  }
+
+  &:before {
+    position: absolute;
+    content: "";
+    bottom: -20px;
+    left: 57%;
+    margin-left: -20px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 20px solid black;
+  }
 }
 
-.cardInner {
+.rope {
+  background: var(--app-black-1);
+  width: 2px;
+  height: 160px;
+  left: 50%;
+  margin-left: -1px;
+  position: absolute;
+  bottom: -115%;
+  border-radius: 5px;
+}
+
+.rowInner {
   width: 100%;
   height: 100%;
-  border-radius: 12px;
+  padding: 80px;
   display: flex;
-  padding: 24px;
+  position: relative;
   align-items: center;
-  flex-direction: column;
   justify-content: center;
-  background-color: var(--app-gray-1);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background-color: var(--app-gray-1);
+  z-index: 1;
+}
+
+.item {
+  flex-basis: 33.3333%;
+  border-right: 1px solid var(--app-white-2);
+
+  &:last-child {
+    border: none
+  }
+}
+
+.number {
+  font-size: 60px;
+  text-align: center;
+  font-weight: 900;
+  margin-bottom: 24px;
+  color: var(--app-white-2);
 }
 
 .title {
   font-size: 32px;
   text-align: center;
+  font-weight: 500;
   color: var(--app-white-2);
   margin-bottom: 16px;
   text-transform: capitalize;
@@ -70,4 +290,54 @@
   color: var(--app-white-2);
   max-width: 1000px;
   margin: 0 auto;
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(1) skew(0, 0) translateY(-230px);
+  }
+  30% {
+    transform: scaleX(0.2) scaleY(0.9) skew(3deg, 0) translateY(-230px);
+  }
+  70% {
+    transform: scaleX(0.2) scaleY(0.9) skew(3deg, 0) translateY(-230px);
+  }
+  100% {
+    transform: scale(1) skew(0, 0) translateY(-230px);
+  }
+}
+
+@keyframes fall {
+  0% {
+    opacity: 1;
+  }
+  5% {
+    opacity: 1;
+  }
+  10% {
+    transform: translateY(100vh);
+  }
+  11% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+    transform: translateY(100vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
