--- a/components/Process/index.module.scss
+++ b/components/Process/index.module.scss
@@ -1,20 +1,22 @@
 .sections {
+  overflow: hidden;
   position: relative;
   background-color: var(--app-gray-1);
 }
 
 .sectionTitle {
-  font-size: 50px;
+  font-size: 70px;
   padding: 0 40px;
-  text-align: center;
+  text-align: left;
   color: var(--app-white-2);
   margin-bottom: 32px;
 }
 
 .sectionSubTitle {
+  width: 80%;
   font-size: 24px;
   padding: 0 40px;
-  text-align: center;
+  text-align: left;
   color: var(--app-white-2);
   margin-bottom: 90px;
 }
