--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,6 +23,11 @@
   --app-orange-1: #cb4b33;
   --app-green-1: #8fd764;
   --app-green-2: #b9d053;
+
+
+
+  --app-blue-77: #1d9bf0;
+
 }
 
 // Reset
