--- a/components/Hero/index.module.scss
+++ b/components/Hero/index.module.scss
@@ -1,75 +1,4 @@
-.headerWrapper {
+.heroWrapper {
   height: 90vh;
-  padding: 16px 24px;
   background-color: var(--app-yellow-2);
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.headerMenu {
-  width: 250px;
-
-  label {
-    display: flex;
-    flex-direction: column;
-    width: 30px;
-    cursor: pointer;
-  }
-
-  label span {
-    height: 3px;
-    margin: 3px 0;
-    border-radius: 10px;
-    background: var(--app-black-1);
-    transition: .4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
-
-  }
-
-  span {
-    width: 100%;
-  }
-
-  &.headerMenuOpen {
-    span:nth-of-type(1) {
-      transform-origin: bottom;
-      transform: rotatez(45deg) translate(8px, 0px)
-    }
-
-    span:nth-of-type(2) {
-      transform-origin: top;
-      transform: rotatez(-45deg)
-    }
-
-    span:nth-of-type(3) {
-      opacity: 0;
-    }
-  }
-}
-
-.headerSocials {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  width: 250px;
-  padding: 0 24px;
-}
-
-.headerSocialIcon {
-  i {
-    cursor: pointer;
-    font-size: 24px;
-    color: var(--app-black-1);
-    transform: translateY(0);
-    transition: 0.1s filter ease-in, 0.2s transform ease-in;
-  }
-
-  &:hover {
-    i {
-      transform: translateY(-2px);
-    }
-  }
 }
