--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,11 +23,6 @@
   --app-orange-1: #cb4b33;
   --app-green-1: #8fd764;
   --app-green-2: #b9d053;
-
-
-
-  --app-blue-77: #1d9bf0;
-
 }
 
 // Reset
@@ -35,6 +30,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overscroll-behavior: none;
   font-family: "SF Pro", sans-serif;
 }
 
