--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,7 @@
   --app-blue-3: #191F26;
   --app-blue-4: #1d9bf0;
   --app-gray-1: #1b1b1b;
+  --app-gray-2: #767676;
   --app-white-1: #ffffff;
   --app-white-2: #e7e9ea;
   --app-black-1: #000000;
@@ -23,6 +24,7 @@
   --app-orange-1: #cb4b33;
   --app-green-1: #8fd764;
   --app-green-2: #b9d053;
+  --app-green-3: #c9fa49;
 }
 
 // Reset
