--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -6,6 +6,32 @@
   background-color: var(--app-gray-1);
 }
 
+.sectionsInner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.imageBox {
+  display: flex;
+  width: 70vh;
+  height: 85vh;
+  align-items: center;
+  justify-content: center;
+  transition: 0.2s transform ease-out;
+  box-shadow: 0 0 2px 2px var(--app-purple-3), 0 0 1px 2px var(--app-white-1), 0 0 2px 2px var(--app-blue-4);
+  transform: translateX(-180px) perspective(500px) rotateX(0deg) rotateY(0deg);
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+    object-position: center;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+  }
+}
+
 .sectionSubTitle {
   font-size: 24px;
   padding: 0 40px;
@@ -18,6 +44,7 @@
   gap: 24px;
   display: flex;
   align-items: stretch;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -43,12 +70,12 @@
 
 .cardText {
   display: flex;
-  padding: 80px 24px;
+  padding: 30px 24px;
   flex-direction: column;
 
 
   .cardTitle {
-    font-size: 60px;
+    font-size: 24px;
     text-align: center;
     color: var(--app-white-2);
   }
@@ -60,16 +87,18 @@
   }
 }
 
-.glitch{
+.glitch {
   animation: glitch 2s ease infinite 2s alternate-reverse;
 
-  &:nth-child(1n){
+  &:nth-child(1n) {
     animation-delay: -1s;
   }
-  &:nth-child(2n){
+
+  &:nth-child(2n) {
     animation-delay: -2s;
   }
-  &:nth-child(3n){
+
+  &:nth-child(3n) {
     animation-delay: -3s;
   }
 }
