--- a/components/Galaxy/index.module.scss
+++ b/components/Galaxy/index.module.scss
@@ -239,9 +239,9 @@ $planets: (
 }
 
 .title {
-  font-size: 60px;
   text-align: center;
   color: var(--app-black-1);
+  font-size: clamp(24px, 5vw, 60px);
   animation: 1s fadeInRight ease-out;
 }
 
