--- a/components/Help/index.module.scss
+++ b/components/Help/index.module.scss
@@ -58,3 +58,12 @@
     color: var(--app-white-2);
   }
 }
+
+@media screen and (max-width: 425px) {
+  .title {
+    font-size: 40px;
+  }
+  .description {
+    font-size: 24px;
+  }
+}
