--- a/components/Expect/index.module.scss
+++ b/components/Expect/index.module.scss
@@ -14,7 +14,6 @@
 
 .sectionTitle {
   font-size: 70px;
-  padding: 0 40px;
   text-align: left;
   color: var(--app-gray-1);
   margin-bottom: 32px;
@@ -23,18 +22,17 @@
 .sectionSubTitle {
   width: 80%;
   font-size: 24px;
-  padding: 0 40px;
   text-align: left;
   color: var(--app-gray-1);
   margin-bottom: 16px;
 }
 
 .line {
-  width: 500px;
   height: 5px;
+  width: 100%;
+  max-width: 500px;
   clip-path: url(#clip);
   position: relative;
-  margin-left: 40px;
   margin-bottom: 90px;
 
   &:before {
@@ -72,8 +70,16 @@
   flex-direction: column;
 
   .cardIcon {
+    width: 80px;
+    height: 80px;
     display: flex;
+    margin: 0 auto 16px;
     justify-content: center;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .cardTitle {
@@ -176,3 +182,34 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .sectionTitle {
+    font-size: 60px;
+  }
+  .cards {
+    flex-direction: column;
+  }
+  .cardText {
+    padding: 24px;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .sections {
+    padding: 40px 24px;
+  }
+  .sectionTitle {
+    font-size: 40px;
+  }
+  .cardText {
+    .cardTitle {
+      font-size: 30px;
+    }
+
+    .cardIcon {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
