--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -24,7 +24,7 @@
   box-shadow: 0 0 2px 2px var(--app-purple-3), 0 0 1px 2px var(--app-white-1), 0 0 2px 2px var(--app-blue-4);
   transform: perspective(500px) rotateX(0deg) rotateY(0deg);
 
-  img {
+  img, video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -87,6 +87,25 @@
       font-size: 20px;
       text-align: center;
       color: var(--app-white-1);
+      margin-bottom: 8px;
+    }
+
+    .cardSocials {
+      gap: 16px;
+      display: flex;
+      margin: 0 auto;
+
+      .cardSocial {
+        width: 32px;
+        height: 32px;
+        text-decoration: none;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+
+      }
     }
   }
 
@@ -397,5 +416,17 @@
   4%, 100% {
     text-shadow: none;
     transform: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .sectionsInner {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sections {
+    padding: 40px 24px;
   }
 }
