--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,9 +16,13 @@
   --app-blue-4: #1d9bf0;
   --app-gray-1: #1b1b1b;
   --app-gray-2: #767676;
+  --app-gray-3: #939394;
+  --app-gray-4: #e6e6e6;
   --app-white-1: #ffffff;
   --app-white-2: #e7e9ea;
   --app-black-1: #000000;
+  --app-black-2: #101012;
+  --app-black-3: #212224;
   --app-yellow-1: #ebcd60;;
   --app-yellow-2: #ffef43;;
   --app-orange-1: #cb4b33;
