--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   width: 70vh;
   height: 85vh;
-  max-width: 500px;
+  max-width: 30vw;
   flex-shrink: 0;
   margin-right: 48px;
   align-items: center;
@@ -72,47 +72,50 @@
   }
 
   .cardText {
+    gap: 16px;
     display: flex;
     padding: 30px 24px;
-    flex-direction: column;
 
 
-    .cardTitle {
-      font-size: 24px;
-      text-align: center;
-      color: var(--app-white-2);
-    }
-
-    .cardDescription {
-      font-size: 20px;
-      text-align: center;
-      color: var(--app-white-1);
-      margin-bottom: 8px;
-    }
-
-    .cardSocials {
-      gap: 16px;
+    .cardInformation {
       display: flex;
-      margin: 0 auto;
+      flex-direction: column;
 
-      .cardSocial {
-        width: 32px;
-        height: 32px;
-        text-decoration: none;
+      .cardTitle {
+        font-size: 24px;
+        text-align: left;
+        color: var(--app-white-1);
+      }
 
-        img {
-          width: 100%;
-          height: 100%;
+      .cardDescription {
+        font-size: 14px;
+        text-align: left;
+        color: var(--app-gray-3);
+        margin-bottom: 8px;
+      }
+
+      .cardSocials {
+        gap: 16px;
+        display: flex;
+
+        .cardSocial {
+          width: 32px;
+          height: 32px;
+          text-decoration: none;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+
         }
-
       }
     }
   }
 
   .sectionSubTitle {
     font-size: 24px;
-    padding: 0 170px;
-    letter-spacing: 4px;
+    padding: 0 100px;
     line-height: 40px;
     text-align: center;
     color: var(--app-white-2);
@@ -134,18 +137,18 @@
     animation-delay: -3s;
   }
 
-  &:nth-child(5n) {
+  &:nth-child(15n) {
     span {
-      color: var(--app-black-1);
-      background-color: var(--app-purple-1);
+      color: var(--app-white-2);
+      background-image: linear-gradient(to bottom, transparent 50%, var(--app-purple-1));
     }
   }
 }
 
 .glitchImages {
-  width: 60%;
-  margin: 0 auto 16px;
-  aspect-ratio: 1 / 1;
+  width: 70px;
+  height: 70px;
+  flex-shrink: 0;
   position: relative;
   border-radius: 50%;
   overflow: hidden;
@@ -419,9 +422,20 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1440px) {
   .sectionsInner {
     flex-direction: column;
+  }
+
+  .imageBox {
+    width: 100%;
+    display: none;
+    max-width: initial;
+  }
+  .mainBox {
+    .sectionSubTitle {
+      padding: 0;
+    }
   }
 }
 
