--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,6 +18,7 @@
   --app-gray-2: #767676;
   --app-gray-3: #939394;
   --app-gray-4: #e6e6e6;
+  --app-gray-5: #cccccc;
   --app-white-1: #ffffff;
   --app-white-2: #e7e9ea;
   --app-black-1: #000000;
