--- a/components/ContactUs/index.module.scss
+++ b/components/ContactUs/index.module.scss
@@ -1,446 +1,126 @@
-.sections {
+.section {
   position: relative;
   padding: 100px 40px;
   background-color: var(--app-gray-1);
-}
 
-.sectionsInner {
-  display: flex;
-  justify-content: space-between;
-}
+  .terminal {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    height: 500px;
 
-.imageBox {
-  display: flex;
-  width: 70vh;
-  height: 85vh;
-  max-width: 30vw;
-  flex-shrink: 0;
-  margin-right: 48px;
-  align-items: center;
-  position: sticky;
-  top: 100px;
-  justify-content: center;
-  transition: 0.2s transform ease-out;
-  box-shadow: 0 0 2px 2px var(--app-purple-3), 0 0 1px 2px var(--app-white-1), 0 0 2px 2px var(--app-blue-4);
-  transform: perspective(500px) rotateX(0deg) rotateY(0deg);
-
-  img, video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-    object-position: center;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-  }
-}
-
-.mainBox {
-  .cards {
-    gap: 24px;
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    margin-bottom: 16px;
-  }
-
-  .card {
-    width: 100%;
-
-    .glitchImage {
-      opacity: 1;
-      object-fit: cover;
-      object-position: center;
-      transition: 0.2s opacity ease-in-out;
+    .fakeButtons {
+      height: 14px;
+      width: 14px;
+      border-radius: 50%;
+      position: relative;
+      top: 6px;
+      left: 6px;
+      background-color: #ff3b47;
+      display: inline-block;
     }
 
-    .pictureImage {
-      opacity: 0;
-      object-fit: cover;
-      object-position: center;
-      transition: 0.2s opacity ease-in-out;
+    .fakeMinimize {
+      left: 11px;
+      background-color: #ffc100;
     }
 
-    &:hover {
-      .glitchImage {
-        opacity: 0.5;
-      }
-
-      .pictureImage {
-        opacity: 0.9;
-      }
+    .fakeZoom {
+      left: 16px;
+      background-color: #00d742;
     }
-  }
 
-  .cardText {
-    gap: 16px;
-    display: flex;
-    padding: 30px 24px;
+    .fakeMenu {
+      width: 100%;
+      box-sizing: border-box;
+      height: 25px;
+      background-color: #bbb;
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+    }
 
+    .fakeScreen {
+      width: 100%;
+      overflow: auto;
+      height: calc(100% - 25px);
+      background-color: #151515;
+      box-sizing: border-box;
+      padding: 20px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
 
-    .cardInformation {
+    .line {
       display: flex;
-      flex-direction: column;
+      text-align: left;
+      overflow: hidden;
+      position: relative;
+      font-size: 1.25em;
+      font-family: monospace;
+      white-space: normal;
+      color: #9CD9F0;
 
-      .cardTitle {
-        font-size: 24px;
-        text-align: left;
-        color: var(--app-white-1);
+      span {
+        font-size: 1em;
+        font-family: monospace;
+        white-space: normal;
+        color: #9CD9F0;
       }
+    }
 
-      .cardDescription {
-        font-size: 14px;
-        text-align: left;
-        color: var(--app-gray-3);
-        margin-bottom: 8px;
-      }
+    .cursor {
+      width: 7px;
+      height: 15.5px;
+      display: inline-block;
+      background-color: white;
+      animation: blink 1s infinite;
+    }
 
-      .cardSocials {
-        gap: 16px;
-        display: flex;
+    .interactiveRow {
+      flex-grow: 1;
+      margin-left: 12px;
+      align-items: center;
+      display: inline-flex;
 
-        .cardSocial {
-          width: 32px;
-          height: 32px;
-          text-decoration: none;
+      .input {
+        width: 100%;
+        outline: none;
+        border: none;
+        color: #9CD9F0;
+        position: relative;
+        font-family: monospace;
+        caret-color: transparent;
+        background-color: transparent;
 
-          img {
-            width: 100%;
-            height: 100%;
-          }
 
+        &::after {
+          content: "";
+          display: inline-block;
+          background-color: var(--app-white-2);
+          vertical-align: top;
+          width: 8px;
+          height: 19px;
+          animation: blink 1s step-end infinite;
         }
       }
     }
   }
-
-  .sectionSubTitle {
-    font-size: 24px;
-    padding: 0 100px;
-    line-height: 40px;
-    text-align: center;
-    color: var(--app-white-2);
-  }
 }
 
-.glitch {
-  animation: glitch 2s ease infinite 2s alternate-reverse;
-
-  &:nth-child(1n) {
-    animation-delay: -1s;
-  }
-
-  &:nth-child(2n) {
-    animation-delay: -2s;
-  }
-
-  &:nth-child(3n) {
-    animation-delay: -3s;
-  }
-
-  &:nth-child(15n) {
-    span {
-      color: var(--app-white-2);
-      background-image: linear-gradient(to bottom, transparent 50%, var(--app-purple-1));
-    }
-  }
-}
-
-.glitchImages {
-  width: 70px;
-  height: 70px;
-  flex-shrink: 0;
-  position: relative;
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-}
-
-.glitchImage,
-.pictureImage {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-
-.glitchImage:nth-child(1) {
-  opacity: 1;
-}
-
-.glitchImage:nth-child(2) {
-  background-color: red;
-  background-blend-mode: var(--blend-1);
-}
-
-.glitchImage:nth-child(3) {
-  background-color: green;
-  background-blend-mode: var(--blend-2);
-}
-
-.glitchImage:nth-child(4) {
-  background-color: blue;
-  background-blend-mode: var(--blend-3);
-}
-
-.glitchImage:nth-child(n+2) {
-  opacity: 0;
-}
-
-.glitchImage:nth-child(n+1) {
-  opacity: 1;
-}
-
-.glitchImage:nth-child(2) {
-  transform: translate3d(1.1, 0, 0);
-  animation: glitch-horizontal 3s infinite linear alternate;
-}
-
-.glitchImage:nth-child(3) {
-  transform: translate3d(-1.1, 0, 0);
-  animation: glitch-horizontal-2 2s infinite linear alternate;
-}
-
-.glitchImage:nth-child(4) {
-  transform: translate3d(-1.1, 0, 0);
-  animation: glitch-vertical 1s infinite linear alternate;
-}
-
-.glitchImage:nth-child(5) {
-  transform: translate3d(0, 1.1, 0) scale3d(-1, -1, 1);
-  animation: glitch-flash 0.5s steps(1, end) infinite;
-}
-
-.glitchImage:nth-child(6) {
-  transform: translate3d(0, 1.3, 0) scale3d(-1, -1, 1);
-  animation: glitch-flash-2 0.5s steps(1, end) infinite;
-}
-
-@keyframes glitch-horizontal {
+@keyframes blink {
   0% {
-    -webkit-clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
-    clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
-  }
-  10% {
-    -webkit-clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
-    clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
-  }
-  20% {
-    -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
-    clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
-  }
-  30% {
-    -webkit-clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
-    clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
+    opacity: 0;
   }
   40% {
-    -webkit-clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
-    clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
+    opacity: 0;
   }
   50% {
-    -webkit-clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
-    clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
-  }
-  60% {
-    -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
-    clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
-  }
-  70% {
-    -webkit-clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
-    clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
-  }
-  80% {
-    -webkit-clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
-    clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+    opacity: 1;
   }
   90% {
-    -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
-    clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
+    opacity: 1;
   }
   100% {
-    -webkit-clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-    clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-  }
-}
-
-@keyframes glitch-horizontal-2 {
-  0% {
-    opacity: 1;
-    transform: translate3d(-10px, 0, 0);
-    clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
-  }
-  3% {
-    clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
-  }
-  5% {
-    clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
-  }
-  7% {
-    clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-  }
-  9% {
-    clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
-  }
-  11% {
-    clip-path: polygon(0 52%, 100% 52%, 100% 59%, 0 59%);
-  }
-  13% {
-    clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-  }
-  15% {
-    clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
-  }
-  17% {
-    clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
-  }
-  19% {
-    clip-path: polygon(0 45%, 100% 45%, 100% 50%, 0 50%);
-  }
-  20% {
-    clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
-  }
-  21.9% {
-    opacity: 1;
-    transform: translate3d(-10px, 0, 0);
-  }
-  22%, 100% {
     opacity: 0;
-    transform: translate3d(0, 0, 0);
-    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-  }
-}
-
-@keyframes glitch-vertical {
-  0% {
-    opacity: 1;
-    transform: translate3d(0, -5px, 0) scale3d(-1, -1, 1);
-    clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
-  }
-  1.5% {
-    clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
-  }
-  2% {
-    clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
-  }
-  2.5% {
-    clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-  }
-  3% {
-    clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
-  }
-  5% {
-    clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
-  }
-  5.5% {
-    clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
-  }
-  7% {
-    clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
-  }
-  8% {
-    clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
-  }
-  9% {
-    clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
-  }
-  10.5% {
-    clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
-  }
-  11% {
-    clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
-  }
-  13% {
-    clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
-  }
-  14% {
-    clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
-  }
-  14.5% {
-    clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
-  }
-  15% {
-    clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
-  }
-  16% {
-    clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-  }
-  18% {
-    clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
-  }
-  20% {
-    clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
-  }
-  21.9% {
-    opacity: 1;
-    transform: translate3d(0, -10px, 0) scale3d(-1, -1, 1);
-  }
-  22%, 100% {
-    opacity: 0;
-    transform: translate3d(0, 0, 0);
-    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-  }
-}
-
-@keyframes glitch-flash {
-  0% {
-    opacity: 0.2;
-    transform: translate3d(10px, 5px, 0);
-  }
-  33%, 100% {
-    opacity: 0;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes glitch-flash-2 {
-  0% {
-    opacity: 0.2;
-    transform: translate3d(5px, 10px, 0);
-  }
-  13%, 100% {
-    opacity: 0;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes glitch {
-  0% {
-    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
-    transform: translate(8px);
-  }
-  2% {
-    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
-  }
-  4%, 100% {
-    text-shadow: none;
-    transform: none;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  .sectionsInner {
-    flex-direction: column;
-  }
-
-  .imageBox {
-    width: 100%;
-    display: none;
-    max-width: initial;
-  }
-  .mainBox {
-    .sectionSubTitle {
-      padding: 0;
-    }
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .sections {
-    padding: 40px 24px;
   }
 }
