--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -443,4 +443,31 @@
   .sections {
     padding: 40px 24px;
   }
+
+  .mainBox {
+    .cards {
+      flex-wrap: wrap;
+
+      .card {
+        width: auto;
+      }
+    }
+
+    .sectionSubTitle {
+      font-size: 20px;
+      line-height: initial;
+    }
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .mainBox {
+    .cards {
+      justify-content: flex-start;
+    }
+
+    .cardText {
+      padding: 0;
+    }
+  }
 }
