--- a/components/ContactUs/index.module.scss
+++ b/components/ContactUs/index.module.scss
@@ -1,7 +1,7 @@
 .section {
   position: relative;
   padding: 100px 40px;
-  background-color: var(--app-gray-1);
+  background-color: var(--app-white-2);
 
   .terminal {
     width: 80%;
@@ -53,31 +53,24 @@
     .line {
       display: flex;
       text-align: left;
-      overflow: hidden;
       position: relative;
-      font-size: 1.25em;
+      font-size: 2em;
       font-family: monospace;
       white-space: normal;
       color: #9CD9F0;
 
       span {
+        flex-shrink: 0;
         font-size: 1em;
         font-family: monospace;
         white-space: normal;
-        color: #9CD9F0;
+        color: var(--app-white-2);
       }
-    }
-
-    .cursor {
-      width: 7px;
-      height: 15.5px;
-      display: inline-block;
-      background-color: white;
-      animation: blink 1s infinite;
     }
 
     .interactiveRow {
       flex-grow: 1;
+      flex-shrink: 0;
       margin-left: 12px;
       align-items: center;
       display: inline-flex;
@@ -86,7 +79,8 @@
         width: 100%;
         outline: none;
         border: none;
-        color: #9CD9F0;
+        display: flex;
+        color: var(--app-white-2);
         position: relative;
         font-family: monospace;
         caret-color: transparent;
@@ -98,8 +92,8 @@
           display: inline-block;
           background-color: var(--app-white-2);
           vertical-align: top;
-          width: 8px;
-          height: 19px;
+          width: 15px;
+          height: 30px;
           animation: blink 1s step-end infinite;
         }
       }
@@ -122,5 +116,54 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .section {
+    .terminal {
+      width: 100%;
+
+      .line {
+        font-size: 1.2em;
+      }
+
+      .interactiveRow {
+        .input {
+          &::after {
+            width: 9px;
+            height: 18.5px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 10px;
+
+    .terminal {
+      width: 100%;
+      height: 380px;
+
+      .line {
+        font-size: 1em;
+
+        .bigText {
+          font-size: 8px;
+        }
+      }
+
+      .interactiveRow {
+        .input {
+          &::after {
+            width: 8px;
+            height: 15px;
+          }
+        }
+      }
+    }
   }
 }
