--- a/components/Dao/index.module.scss
+++ b/components/Dao/index.module.scss
@@ -100,3 +100,37 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .mainBlock {
+    gap: 24px;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 100%;
+    margin-left: 0;
+    max-width: initial;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sections {
+    padding: 40px 24px;
+  }
+  .sectionTitle {
+    font-size: 40px;
+    padding: 0;
+  }
+
+  .avatarWrapper {
+    .avatar {
+      width: 300px;
+      height: 300px;
+    }
+
+    &:before {
+      width: 210px;
+      height: 210px;
+    }
+  }
+}
