--- a/components/Expect/index.module.scss
+++ b/components/Expect/index.module.scss
@@ -29,27 +29,6 @@
   margin-bottom: 90px;
 }
 
-//.line {
-//  height: 5px;
-//  width: 100%;
-//  max-width: 500px;
-//  clip-path: url(#clip);
-//  position: relative;
-//  margin-bottom: 90px;
-//
-//  &:before {
-//    content: '';
-//    position: absolute;
-//    height: 100%;
-//    width: 100%;
-//    top: 0;
-//    left: 0;
-//    background: var(--app-black-1);
-//    z-index: 1;
-//    clip-path: url(#clip);
-//  }
-//}
-
 .cards {
   gap: 24px;
   display: flex;
@@ -202,11 +181,38 @@
     padding: 40px 24px;
   }
   .sectionTitle {
-    font-size: 40px;
+    font-size: 32px;
   }
   .cardText {
     .cardTitle {
       font-size: 30px;
+    }
+
+    .cardIcon {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .sectionTitle {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+
+  .sectionSubTitle {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
+
+  .cardText {
+    .cardTitle {
+      font-size: 30px;
+    }
+
+    .cardDescription{
+      font-size: 16px;
     }
 
     .cardIcon {
