--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -78,3 +78,122 @@
 
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .footer {
+    .container {
+      .left,
+      .right {
+        img {
+          width: 100px;
+          height: 80px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    .container {
+      padding: 48px;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      .left {
+        order: 1;
+
+        img {
+          width: auto;
+          transform: rotate(0deg);
+        }
+      }
+
+      .right {
+        order: 1;
+
+        img {
+          width: auto;
+          transform: rotate(0deg);
+        }
+      }
+
+      .main {
+        order: 3;
+        padding: 0;
+        width: 100%;
+        flex-wrap: wrap;
+        margin-top: 24px;
+      }
+
+      .column {
+        width: calc(50% - 12px);
+
+        &:nth-child(2n) {
+          .category {
+            align-items: flex-end;
+
+            .categoryItem {
+              text-align: right;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    .container {
+      padding: 24px;
+      justify-content: flex-start;
+
+      .left, .right {
+        width: auto;
+        height: 55px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .left {
+        margin-right: 8px;
+      }
+
+      .column {
+        width: 100%;
+
+        &:nth-child(2n) {
+          .category {
+            align-items: flex-start;
+
+            .categoryItem {
+              text-align: left;
+            }
+          }
+        }
+
+        .category {
+          .categoryItems {
+            gap: 12px;
+            flex-wrap: wrap;
+            flex-direction: row;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .footer {
+    .container {
+      .left, .right {
+        height: 40px;
+      }
+    }
+  }
+}
