--- a/components/Galaxy/index.module.scss
+++ b/components/Galaxy/index.module.scss
@@ -241,8 +241,9 @@ $planets: (
 .title {
   text-align: center;
   color: var(--app-black-1);
-  font-size: clamp(24px, 5vw, 60px);
+  font-size: clamp(22px, 5vw, 60px);
   animation: 1s fadeInRight ease-out;
+  margin-bottom: 16px;
 }
 
 .description {
@@ -339,5 +340,18 @@ $planets: (
   100% {
     opacity: 100%;
     transform: translateX(0px);
+  }
+}
+
+@media screen and (max-width: 1024px){
+  .description{
+    padding: 24px 48px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .description{
+    font-size: 16px;
+    line-height: initial;
   }
 }
