--- a/components/Industries/index.module.scss
+++ b/components/Industries/index.module.scss
@@ -112,3 +112,9 @@
     transform: rotate(360deg) scale(18) translateX(20px);
   }
 }
+
+@media screen and (max-width: 768px) {
+  .main {
+    padding: 20px;
+  }
+}
