--- a/components/ContactUs/index.module.scss
+++ b/components/ContactUs/index.module.scss
@@ -142,11 +142,17 @@
 
 @media screen and (max-width: 768px) {
   .section {
-    padding: 10px;
+    padding: 0px;
 
     .terminal {
       width: 100%;
       height: 380px;
+      border-radius: 0;
+
+      .fakeMenu,
+      .fakeScreen {
+        border-radius: 0;
+      }
 
       .line {
         font-size: 1em;
