--- a/components/Galaxy/index.module.scss
+++ b/components/Galaxy/index.module.scss
@@ -343,15 +343,25 @@ $planets: (
   }
 }
 
-@media screen and (max-width: 1024px){
-  .description{
+@media screen and (max-width: 1024px) {
+  .description {
     padding: 24px 48px;
   }
 }
 
-@media screen and (max-width: 768px){
-  .description{
+@media screen and (max-width: 768px) {
+  .description {
     font-size: 16px;
     line-height: initial;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title{
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+  .description {
+    display: none;
   }
 }
