--- a/components/Services/index.module.scss
+++ b/components/Services/index.module.scss
@@ -112,7 +112,8 @@
     padding: 40px 24px;
 
     .sectionTitle {
-      font-size: 32px;
+      font-size: 24px;
+      margin-bottom: 12px;
     }
 
     .section {
