--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -1,5 +1,5 @@
 .menu {
-  top: 0;
+  top: 66px;
   left: 0;
   z-index: 11;
   width: 320px;
@@ -7,21 +7,9 @@
   position: fixed;
   transform: translateX(-100%);
   transition: 0.3s transform ease;
-  background-color: rgba(255, 255, 255, 0.4);
-  backdrop-filter: blur(3px);
 
   &.shown {
     transform: translateX(0%);
-  }
-
-  .header {
-    display: flex;
-    padding: 16px;
-    justify-content: flex-end;
-
-    .close {
-      cursor: pointer;
-    }
   }
 
   .list {
@@ -32,19 +20,20 @@
       padding: 8px 16px;
       cursor: pointer;
       background-color: transparent;
-      transition: 0.2s background-color ease;
 
       .title {
-        font-size: 20px;
-        color: var(--app-gray-1);
-        transition: 0.2s color ease;
+        font-size: 32px;
+        letter-spacing: 2px;
+        font-weight: 700;
+        color: var(--app-black-1);
+        transition: 0.2s color ease, 0.2s text-shadow ease;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0);
       }
 
       &:hover {
-        background-color: var(--app-gray-1);
-
         .title {
-          color: var(--app-white-2);
+          color: var(--app-yellow-2);
+          text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
       }
     }
