--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -13,7 +13,9 @@
       align-items: center;
 
       img {
-        width: 250px;
+        width: 350px;
+        height: 200px;
+        transform: rotate(-8deg);
       }
     }
 
