--- a/components/Process/index.module.scss
+++ b/components/Process/index.module.scss
@@ -40,6 +40,7 @@
   z-index: 1;
   position: relative;
   margin-bottom: 40px;
+  will-change: transform;
   animation: float 6s ease-in-out infinite;
 
   &:first-child {
